--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "author": "Algolia Samples",
   "license": "MIT",
+  "scripts": {
+    "dev": "node index.js"
+  },
   "devDependencies": {
     "algoliasearch": "^4.10.5",
     "dotenv": "^10.0.0"
